--- a/app/src/main/res/layout/activity_user_page_fragment.xml
+++ b/app/src/main/res/layout/activity_user_page_fragment.xml
@@ -74,25 +74,25 @@
 
             <EditText
                 android:id="@+id/etGoal"
-                android:layout_width="208dp"
+                android:layout_width="195dp"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:layout_marginTop="10dp"
-                android:padding="8dp"
-                android:hint="Enter Estimated Amount"
                 android:background="#DCDCDC"
+                android:hint="Enter Estimated Amount"
                 android:inputType="text"
-                />
+                android:padding="8dp" />
 
             <Button
                 android:id="@+id/btnUpdateGoal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="90dp"
+                android:layout_height="48dp"
                 android:layout_alignParentEnd="false"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
                 android:backgroundTint="#3CB371"
                 android:text="Update"
+                android:textSize="10sp"
                 app:cornerRadius="10dp" />
 
         </LinearLayout>
